force-app/main/default/objects/FIN_PaymentDistribution__c/FIN_PaymentDistribution__c.object-meta.xml
<CustomObject>
    <label>Payment Distribution</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>Payment Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Distributions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>