force-app/main/default/objects/FIN_PaymentDistribution__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>