force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_AdjustedDistributionAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdjustedDistributionAmount__c</fullName>
    <formula>&apos;test&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DELETE Adjusted Distribution Amount</label>
    <type>Text</type>
</CustomField>