force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_AdjustedDistributionAmount_Tax__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdjustedDistributionAmount_Tax__c</fullName>
    <formula>&apos;test&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Distribution Amount - Tax Inclu</label>
    <type>Text</type>
</CustomField>