force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdjustmentAmount__c</fullName>
    <label>Distribution Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>