force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>FIN_Auto_Approved__c</fullName>
    <description>Fill up Contract, Distribution Amount, Payment and Library Association to mark the record Approved</description>
    <formula>IF(
OR( ISBLANK( FIN_Payment__c) ,ISBlank(FIN_LibraryAssociation__c), ISBLANK(FIN_DistributionAmount__c), ISBLANK(Contract__c) ) ,
FALSE,
TRUE)</formula>
    <inlineHelpText>Fill up Contract, Distribution Amount, Payment and Library Association to mark the record Approved</inlineHelpText>
    <label>Auto Approved</label>
    <type>Checkbox</type>
</CustomField>