force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ClientID__c.field-meta.xml
<CustomField>
    <fullName>FIN_ClientID__c</fullName>
    <description>Formula (Client Id field)</description>
    <formula>FIN_Client__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>