force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_CompanyCode__c</fullName>
    <formula>FIN_Payment__r.FIN_Order__r.Contract.FIN_ParentContract__r.FIN_CompanyCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>