force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ComponentName__c.field-meta.xml
<CustomField>
    <fullName>FIN_ComponentName__c</fullName>
    <label>Component Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>