force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ComponentOf__c.field-meta.xml
<CustomField>
    <fullName>FIN_ComponentOf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component Of</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Payment Distributions (Component Of)</relationshipLabel>
    <relationshipName>Payment_Distributions1</relationshipName>
    <type>Lookup</type>
</CustomField>