force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ContextID__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContextID__c</fullName>
    <description>Formula(Context ID field)</description>
    <formula>FIN_ContextName__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Context ID</label>
    <type>Text</type>
</CustomField>