force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ContextName__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContextName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context Name</label>
    <referenceTo>FIN_Context__c</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>