force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ContractedProduct__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContractedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracted Product</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>