force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ContractName__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContractName__c</fullName>
    <formula>Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>