force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_CustomerAccountNum__c.field-meta.xml
<CustomField>
    <fullName>FIN_CustomerAccountNum__c</fullName>
    <externalId>true</externalId>
    <label>Customer Account Num</label>
    <length>100</length>
    <type>Text</type>
</CustomField>