force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_CustomerAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>FIN_CustomerAccountNumber__c</fullName>
    <externalId>true</externalId>
    <label>Customer Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>