force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_DistributionAmountTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_DistributionAmountTaxAmount__c</fullName>
    <label>Distribution Amount - Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>