force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_EnrichedLibraryAssociation__c.field-meta.xml
<CustomField>
    <fullName>FIN_EnrichedLibraryAssociation__c</fullName>
    <label>Enriched Library Association</label>
    <length>250</length>
    <type>Text</type>
</CustomField>