force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Entity__c.field-meta.xml
<CustomField>
    <fullName>FIN_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Distributions (Entity)</relationshipLabel>
    <relationshipName>Payment_Distributions1</relationshipName>
    <type>Lookup</type>
</CustomField>