force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Event__c.field-meta.xml
<CustomField>
    <fullName>FIN_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>