force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_EventId__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventId__c</fullName>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>