force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_EventName__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventName__c</fullName>
    <formula>FIN_Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>