force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_EventZone__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventZone__c</fullName>
    <label>EventZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>