force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_EventZoneType__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventZoneType__c</fullName>
    <label>Event Zone Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>