force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_FeeComponent__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeComponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Component</label>
    <referenceTo>Fee_Components__c</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>PaymentDistributions</relationshipName>
    <type>Lookup</type>
</CustomField>