force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_FeeID__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeID__c</fullName>
    <externalId>true</externalId>
    <label>Fee ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>