force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_IsComponent__c.field-meta.xml
<CustomField>
    <fullName>FIN_IsComponent__c</fullName>
    <description>Formula (Checkbox product lookup component field)</description>
    <formula>FIN_ComponentOf__r.SBQQ__Component__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component</label>
    <type>Checkbox</type>
</CustomField>