force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_JournalEntryAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_JournalEntryAmount__c</fullName>
    <formula>FIN_DistributionAmount__c  * FIN_JournalEntrySign__c</formula>
    <label>Journal Entry Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>