force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_OperatorId__c.field-meta.xml
<CustomField>
    <fullName>FIN_OperatorId__c</fullName>
    <label>Operator ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>