force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Order_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>