force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_OrderID__c.field-meta.xml
<CustomField>
    <fullName>FIN_OrderID__c</fullName>
    <externalId>true</externalId>
    <label>Sales ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>