force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>FIN_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>