force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Payment_Distribution_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payment_Distribution_Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>Payment Distribution Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>