force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_PaymentDistributionID__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentDistributionID__c</fullName>
    <externalId>true</externalId>
    <label>Payment Distribution ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>