force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_PaymentId__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentId__c</fullName>
    <label>Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>