force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_PaymentMerchant__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentMerchant__c</fullName>
    <formula>FIN_Payment__r.FIN_PaymentMerchant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Merchant</label>
    <type>Text</type>
</CustomField>