force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_PaymentTransactionId__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentTransactionId__c</fullName>
    <label>Payment transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>