force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_PaymentTypeChannel__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentTypeChannel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Type Channel</label>
    <referenceTo>FIN_Payment_Type_Channel__c</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>