force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_PDUnclassified__c.field-meta.xml
<CustomField>
    <fullName>FIN_PDUnclassified__c</fullName>
    <formula>((CONTAINS(FIN_ContractRecordType__c, &apos;Master&apos;) || 
 ISBLANK(Contract__c) || CONTAINS(FIN_ContractName__c, &apos;UNCLASSIFIED&apos;)) &amp;&amp; !FIN_Auto_Approved__c)
|| (ISBLANK(FIN_Event__c) &amp;&amp; !FIN_Auto_Approved__c)
|| !FIN_Auto_Approved__c
|| (FIN_Sales_Unclassified__c &amp;&amp; !FIN_Auto_Approved__c)
|| (ISBLANK(FIN_LibraryAssociation__c) &amp;&amp; !FIN_Auto_Approved__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD Unclassified?</label>
    <type>Checkbox</type>
</CustomField>