force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Product__c.field-meta.xml
<CustomField>
    <fullName>FIN_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>