force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ProductID__c.field-meta.xml
<CustomField>
    <fullName>FIN_ProductID__c</fullName>
    <externalId>true</externalId>
    <label>Product ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>