force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_ProductName__c.field-meta.xml
<CustomField>
    <fullName>FIN_ProductName__c</fullName>
    <label>Product Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>