force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Remark__c.field-meta.xml
<CustomField>
    <fullName>FIN_Remark__c</fullName>
    <description>Remark from Invoice Schedule</description>
    <label>Remark</label>
    <length>250</length>
    <type>Text</type>
</CustomField>