force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Remittance_Payout_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Remittance_Payout_Status__c</fullName>
    <label>Remittance Payout Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Remittance_Payout_Status</valueSetName>
    </valueSet>
</CustomField>