force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Revenue_Center__c.field-meta.xml
<CustomField>
    <fullName>FIN_Revenue_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Center</label>
    <referenceTo>Revenue_Center__c</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>