force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_RevenueCenterCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_RevenueCenterCode__c</fullName>
    <label>Revenue Center Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>