force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_RevenueCenterName__c.field-meta.xml
<CustomField>
    <fullName>FIN_RevenueCenterName__c</fullName>
    <label>Revenue Center Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>