force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_RevenueCenterRemittanceAccount__c.field-meta.xml
<CustomField>
    <fullName>FIN_RevenueCenterRemittanceAccount__c</fullName>
    <label>Revenue Center Remittance Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>