force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_RulesInfo__c.field-meta.xml
<CustomField>
    <fullName>FIN_RulesInfo__c</fullName>
    <label>RulesInfo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>