force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_SettlementCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementCode__c</fullName>
    <label>Settlement Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>