force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_SystemDataLoadLog__c.field-meta.xml
<CustomField>
    <fullName>FIN_SystemDataLoadLog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>System Data Load Log</label>
    <referenceTo>FIN_SystemDataLoadLog__c</referenceTo>
    <relationshipLabel>Payment Distributions</relationshipLabel>
    <relationshipName>Payment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>