force-app/main/default/objects/FIN_PaymentDistribution__c/fields/FIN_Total_Adj_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Adj_Gross_Amount__c</fullName>
    <formula>FIN_DistributionAmount__c + FIN_AdjustmentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adj. Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>