force-app/main/default/objects/FIN_PaymentDistribution__c/recordTypes/FIN_SWE_Payment_Distribution.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Payment_Distribution</fullName>
    <active>true</active>
    <label>SWE Payment Distribution</label>
</RecordType>