force-app/main/default/objects/FIN_PaymentDistribution__c/recordTypes/FIN_UK_Payment_Distribution.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Payment_Distribution</fullName>
    <active>true</active>
    <label>UK Payment Distribution</label>
</RecordType>