force-app/main/default/objects/FIN_PaymentDistribution__c/recordTypes/FIN_US_Payment_Distribution.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Payment_Distribution</fullName>
    <active>true</active>
    <label>US Payment Distribution</label>
</RecordType>