force-app/main/default/objects/FIN_PaymentDistribution__c/validationRules/Correct_Contract_Assign.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Contract_Assign</fullName>
    <active>false</active>
    <errorConditionFormula>FIN_Payment__r.Contract__c &lt;&gt;  Contract__c</errorConditionFormula>
    <errorMessage>Payment Distribution cannot be assigned to different Contracts through direct Contract assignment and through the assigned Sale</errorMessage>
</ValidationRule>