force-app/main/default/objects/FIN_PaymentDistribution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Payment__c</columns>
    <columns>FIN_ContextName__c</columns>
    <columns>Contract__c</columns>
    <columns>FIN_PaymentType__c</columns>
    <columns>FIN_Channel__c</columns>
    <columns>FIN_ComponentName__c</columns>
    <columns>FIN_DistributionAmount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>