force-app/main/default/objects/FIN_PaymentDistribution__c/listViews/Approved_Payment_Distributions.listView-meta.xml
<ListView>
    <fullName>Approved_Payment_Distributions</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Payment Distributions</label>
</ListView>