force-app/main/default/objects/FIN_PaymentDistribution__c/listViews/FIN_US_Classified_FIN_PaymentDistribution.listView-meta.xml
<ListView>
    <fullName>FIN_US_Classified_FIN_PaymentDistribution</fullName>
    <filterScope>Queue</filterScope>
    <label>US Classified</label>
    <queue>FIN_US_Classified</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>