force-app/main/default/objects/FIN_PaymentDistribution__c/listViews/First_Avenue.listView-meta.xml
<ListView>
    <fullName>First_Avenue</fullName>
    <columns>NAME</columns>
    <columns>FIN_Payment__c</columns>
    <columns>FIN_ContextName__c</columns>
    <columns>FIN_PaymentType__c</columns>
    <columns>FIN_Settlement_Status__c</columns>
    <columns>FIN_ComponentName__c</columns>
    <columns>FIN_DistributionAmountNetofTaxAmount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>FIN_DistributionDate__c</columns>
    <columns>Contract__c</columns>
    <columns>Invoices_Status__c</columns>
    <columns>FIN_LibraryAssociation__c</columns>
    <columns>FIN_Channel__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FIN_PaymentDistribution__c.FIN_US_Payment_Distribution</value>
    </filters>
    <label>First Avenue</label>
</ListView>