force-app/main/default/objects/FIN_PaymentDistribution__c/listViews/My_Payment_Distributions_to_Approve.listView-meta.xml
<ListView>
    <fullName>My_Payment_Distributions_to_Approve</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FIN_ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>My Payment Distributions to Approve</label>
</ListView>